// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MediaGallerySection component renders correctly 1`] = `
<div>
  <div
    class="Section-root Section-alabaster css-10chrh8"
    data-testid="media-gallery-section-Lorem-ipsum"
  >
    <div
      class=" css-ze8cyt"
    >
      <div
        class="MuiContainer-root MuiContainer-maxWidthXl css-15p7r21-MuiContainer-root"
      >
        <div
          class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row MuiGrid2-spacing-xs-3  css-1qxu916-MuiGrid2-root"
          data-testid="grid-container"
        >
          <div
            class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-lg-8 css-640u2w-MuiGrid2-root"
            data-testid="grid-item"
          >
            <h2
              class="MuiTypography-root MuiTypography-h2 Typography-underline css-1gn4sxn-MuiTypography-root"
              data-testid="typography"
            >
              Lorem ipsum
            </h2>
          </div>
          <div
            class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 css-1y7ikt3-MuiGrid2-root"
            data-testid="grid-item"
          >
            <div
              class="css-2bw4l8"
              data-testid="media-gallery-root"
            >
              <div
                class=" css-79elbk"
                data-testid="media-gallery-media-wrapper"
              >
                <img
                  alt="alt text"
                  class="MediaGallery-mainImageWrapperCover MediaGallery-mainImageWrapperdefault css-clqrrf"
                  data-nimg="fill"
                  data-testid="media-gallery-media"
                  decoding="async"
                  draggable="false"
                  loading="lazy"
                  sizes="(max-width: 599px) 561px, (max-width: 719px) 665px, (max-width: 839px) 785px, (max-width: 1439px) 1285px, 1392px"
                  src="https:http://localhost:8080/custom-image.jpg?w=3840&q=50"
                  srcset="https:http://localhost:8080/custom-image.jpg?w=16&q=50 16w, https:http://localhost:8080/custom-image.jpg?w=32&q=50 32w, https:http://localhost:8080/custom-image.jpg?w=48&q=50 48w, https:http://localhost:8080/custom-image.jpg?w=64&q=50 64w, https:http://localhost:8080/custom-image.jpg?w=96&q=50 96w, https:http://localhost:8080/custom-image.jpg?w=128&q=50 128w, https:http://localhost:8080/custom-image.jpg?w=256&q=50 256w, https:http://localhost:8080/custom-image.jpg?w=384&q=50 384w, https:http://localhost:8080/custom-image.jpg?w=640&q=50 640w, https:http://localhost:8080/custom-image.jpg?w=750&q=50 750w, https:http://localhost:8080/custom-image.jpg?w=828&q=50 828w, https:http://localhost:8080/custom-image.jpg?w=1080&q=50 1080w, https:http://localhost:8080/custom-image.jpg?w=1200&q=50 1200w, https:http://localhost:8080/custom-image.jpg?w=1920&q=50 1920w, https:http://localhost:8080/custom-image.jpg?w=2048&q=50 2048w, https:http://localhost:8080/custom-image.jpg?w=3840&q=50 3840w"
                  style="position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; object-fit: cover; object-position: center; color: transparent;"
                />
                <div
                  class="css-gy9mja"
                  data-testid="media-gallery-caption-text"
                >
                  <p
                    class="MuiTypography-root MuiTypography-h6 css-1s1oev7-MuiTypography-root"
                    data-testid="typography"
                  >
                    <span
                      class="LinesEllipsis  Truncate-root css-13o7eu2"
                    >
                      CAPTION
                      <wbr />
                    </span>
                  </p>
                </div>
              </div>
              <div
                class="css-xhyzf2"
                data-testid="thumbnails-root"
              >
                <button
                  aria-label="Scroll left"
                  class="MuiButtonBase-root ThumbScrollerButton-left css-1qq5z22-MuiButtonBase-root"
                  data-testid="thumbnail-scroller-left"
                  tabindex="-1"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium ThumbScrollerButton-icon css-i4bv87-MuiSvgIcon-root"
                    data-testid="ChevronLeftIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M15.41 7.41 14 6l-6 6 6 6 1.41-1.41L10.83 12z"
                    />
                  </svg>
                  <span
                    class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                  />
                </button>
                <div
                  class="css-9kk3b1"
                  data-testid="thumbnail-scroller"
                  style="right: 0px;"
                >
                  <button
                    class="MuiButtonBase-root MediaGallery-thumbnail Thumbnail-selected Thumbnail-large Thumbnail-selected css-1ebds7h-MuiButtonBase-root"
                    data-gtm="{"id":"media-gallery1","label":"alt text","action":"http://localhost:8080/custom-image.jpg"}"
                    data-testid="thumbnail-default"
                    tabindex="0"
                    type="button"
                  >
                    <img
                      alt="alt text"
                      class="css-1tdmq76"
                      data-nimg="fill"
                      decoding="async"
                      draggable="false"
                      loading="lazy"
                      sizes="(max-width: 599px) 561px, (max-width: 719px) 665px, (max-width: 839px) 785px, (max-width: 1439px) 1285px, 1392px"
                      src="https:http://localhost:8080/custom-image.jpg?w=3840&q=50"
                      srcset="https:http://localhost:8080/custom-image.jpg?w=16&q=50 16w, https:http://localhost:8080/custom-image.jpg?w=32&q=50 32w, https:http://localhost:8080/custom-image.jpg?w=48&q=50 48w, https:http://localhost:8080/custom-image.jpg?w=64&q=50 64w, https:http://localhost:8080/custom-image.jpg?w=96&q=50 96w, https:http://localhost:8080/custom-image.jpg?w=128&q=50 128w, https:http://localhost:8080/custom-image.jpg?w=256&q=50 256w, https:http://localhost:8080/custom-image.jpg?w=384&q=50 384w, https:http://localhost:8080/custom-image.jpg?w=640&q=50 640w, https:http://localhost:8080/custom-image.jpg?w=750&q=50 750w, https:http://localhost:8080/custom-image.jpg?w=828&q=50 828w, https:http://localhost:8080/custom-image.jpg?w=1080&q=50 1080w, https:http://localhost:8080/custom-image.jpg?w=1200&q=50 1200w, https:http://localhost:8080/custom-image.jpg?w=1920&q=50 1920w, https:http://localhost:8080/custom-image.jpg?w=2048&q=50 2048w, https:http://localhost:8080/custom-image.jpg?w=3840&q=50 3840w"
                      style="position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; object-fit: cover; object-position: center; color: transparent;"
                    />
                  </button>
                  <button
                    class="MuiButtonBase-root MediaGallery-thumbnail Thumbnail-large css-1ebds7h-MuiButtonBase-root"
                    data-gtm="{"id":"media-gallery1","label":"label","action":"http://localhost:8080/custom-image.jpg"}"
                    data-testid="thumbnail-video"
                    style="background-image: url(http://localhost:8080/custom-image.jpg);"
                    tabindex="0"
                    type="button"
                  >
                    <span
                      class="css-18rjrey"
                    >
                      label
                    </span>
                    <div
                      aria-label="MC: media.video"
                      class="css-z7rmfo"
                    >
                      <div
                        class="css-t93cf4"
                      >
                        <div
                          class="css-1y1tflw"
                        >
                          <svg
                            aria-hidden="true"
                            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-19q1qvb-MuiSvgIcon-root"
                            data-testid="PlayArrowIcon"
                            focusable="false"
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M8 5v14l11-7z"
                            />
                          </svg>
                        </div>
                        <p
                          class="MuiTypography-root MuiTypography-body1 css-1ezfe9h-MuiTypography-root"
                          data-testid="typography"
                        >
                          MC: media.video
                        </p>
                      </div>
                      <div
                        class="css-156fqrw"
                      />
                    </div>
                    <span
                      class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                    />
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`MediaGallerySection component renders correctly with long description 1`] = `
<div>
  <div
    class="Section-root Section-alabaster css-10chrh8"
    data-testid="media-gallery-section-Lorem-ipsum"
  >
    <div
      class=" css-ze8cyt"
    >
      <div
        class="MuiContainer-root MuiContainer-maxWidthXl css-15p7r21-MuiContainer-root"
      >
        <div
          class="MuiGrid2-root MuiGrid2-container MuiGrid2-direction-xs-row MuiGrid2-spacing-xs-3  css-1qxu916-MuiGrid2-root"
          data-testid="grid-container"
        >
          <div
            class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-lg-8 css-640u2w-MuiGrid2-root"
            data-testid="grid-item"
          >
            <h2
              class="MuiTypography-root MuiTypography-h2 Typography-underline css-1gn4sxn-MuiTypography-root"
              data-testid="typography"
            >
              Lorem ipsum
            </h2>
            <div
              class="css-hix1c1"
            >
              <div
                class="RichText-root RichText-no-bottom-margin css-1lf5op0"
              >
                <h2
                  class="MuiTypography-root MuiTypography-h2 RichText-title css-1gn4sxn-MuiTypography-root"
                  data-testid="typography"
                >
                  Heading 2
                </h2>
                <p
                  class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom  css-jia7v4-MuiTypography-root"
                  data-testid="typography"
                >
                  this is a test paragraph
                </p>
              </div>
            </div>
          </div>
          <div
            class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 css-1y7ikt3-MuiGrid2-root"
            data-testid="grid-item"
          >
            <div
              class="css-2bw4l8"
              data-testid="media-gallery-root"
            >
              <div
                class=" css-79elbk"
                data-testid="media-gallery-media-wrapper"
              >
                <img
                  alt="alt text"
                  class="MediaGallery-mainImageWrapperCover MediaGallery-mainImageWrapperdefault css-clqrrf"
                  data-nimg="fill"
                  data-testid="media-gallery-media"
                  decoding="async"
                  draggable="false"
                  loading="lazy"
                  sizes="(max-width: 599px) 561px, (max-width: 719px) 665px, (max-width: 839px) 785px, (max-width: 1439px) 1285px, 1392px"
                  src="https:http://localhost:8080/custom-image.jpg?w=3840&q=50"
                  srcset="https:http://localhost:8080/custom-image.jpg?w=16&q=50 16w, https:http://localhost:8080/custom-image.jpg?w=32&q=50 32w, https:http://localhost:8080/custom-image.jpg?w=48&q=50 48w, https:http://localhost:8080/custom-image.jpg?w=64&q=50 64w, https:http://localhost:8080/custom-image.jpg?w=96&q=50 96w, https:http://localhost:8080/custom-image.jpg?w=128&q=50 128w, https:http://localhost:8080/custom-image.jpg?w=256&q=50 256w, https:http://localhost:8080/custom-image.jpg?w=384&q=50 384w, https:http://localhost:8080/custom-image.jpg?w=640&q=50 640w, https:http://localhost:8080/custom-image.jpg?w=750&q=50 750w, https:http://localhost:8080/custom-image.jpg?w=828&q=50 828w, https:http://localhost:8080/custom-image.jpg?w=1080&q=50 1080w, https:http://localhost:8080/custom-image.jpg?w=1200&q=50 1200w, https:http://localhost:8080/custom-image.jpg?w=1920&q=50 1920w, https:http://localhost:8080/custom-image.jpg?w=2048&q=50 2048w, https:http://localhost:8080/custom-image.jpg?w=3840&q=50 3840w"
                  style="position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; object-fit: cover; object-position: center; color: transparent;"
                />
                <div
                  class="css-gy9mja"
                  data-testid="media-gallery-caption-text"
                >
                  <p
                    class="MuiTypography-root MuiTypography-h6 css-1s1oev7-MuiTypography-root"
                    data-testid="typography"
                  >
                    <span
                      class="LinesEllipsis  Truncate-root css-13o7eu2"
                    >
                      CAPTION
                      <wbr />
                    </span>
                  </p>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
